--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,9 +10,9 @@
     "howToPlay": "How to play",
     "instructions": "Guess the word in {{tries}} tries. After each guess, the color of the tiles will change to show how close your guess was to the word.",
     "pickYourLanguage": "Choose a language",
-    "correctSpotInstructions": "The letter W is in the word and in the correct spot.",
-    "wrongSpotInstructions": "The letter L is in the word but in the wrong spot.",
-    "notInWordInstructions": "The letter U is not in the word in any spot.",
+    "correctSpotInstructions": "The sound W is in the word and in the correct spot.",
+    "wrongSpotInstructions": "The sound L is in the word but in the wrong spot.",
+    "notInWordInstructions": "The sound U is not in the word in any spot.",
     "guessDistribution": "Guess Distribution",
     "statistics": "Statistics",
     "totalTries": "Total tries",
@@ -22,9 +22,8 @@
     "newWordCountdown": "New word in",
     "share": "Share",
     "winMessages": [
-        "Great Job!",
-        "Awesome",
-        "Well done!"
+        "Wenné k’áa’a mi!",
+        "Wenném mɨyém!"
     ],
     "firstExampleWord": [{
             "letter": "W",
